--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,59 @@
 @import "tailwindcss";
 
 @theme {
-  --color-bg-primary: var(--background);
-  --color-text-primary: var(--foreground);
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+
+  --color-border: var(--border);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
+/* --- LIGHT MODE --- */
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #18181b;
+
+  --card: #f4f4f5;
+  --card-foreground: #18181b;
+
+  --muted: #f4f4f5;
+  --muted-foreground: #52525b;
+
+  --border: #e4e4e7;
+
+  --primary: #2563eb;
+  --primary-foreground: #ffffff;
 }
 
+/* --- DARK MODE --- */
 .dark {
-  --background: #0a0a0a;
-  --foreground: #ededed;
+  --background: #09090b;
+  --foreground: #fafafa;
+
+  --card: #18181b;
+  --card-foreground: #fafafa;
+
+  --muted: #27272a;
+  --muted-foreground: #a1a1aa;
+
+  --border: #27272a;
+
+  --primary: #3b82f6;
+  --primary-foreground: #ffffff;
 }
 
 body {
   background-color: var(--background);
   color: var(--foreground);
   font-family: var(--font-geist-sans), Arial, sans-serif;
-  transition: background-color 0.3s, color 0.3s; /* Giúp chuyển chế độ mượt hơn */
+  transition:
+    background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+    color 0.5s ease;
 }
